--- a/MyStyle.css
+++ b/MyStyle.css
@@ -43,3 +43,9 @@ p3 {
     top: 50px;
     left: 500px;
 }
+p30{
+    color: darkslateblue;
+    position: absolute;
+    top: 750;
+    left: 5px;
+}
